# sot-state-observation

./: AUTHORS  CMakeLists.txt  README.md
include/sot-state-observation/: calibrate.hh  calibrate_imu.hh  dg-imu-attitude-estimation.hh  dg-imu-flexibility-estimation.hh  dg-imu-model-base-flex-estimation.hh  dg-imu-model-free-flex-estimation.hh  drift-from-mocap.hh  dynamic-graph-imu-attitude-estimation.hh  estimator-interface.hh  filter.hh  from-local-to-global-frame.hh  input_reconstructor.hh  moving-frame-transformation.hh  odometry.hh  position-state-reconstructor.hh  stack-of-contacts.hh
include/sot-state-observation/tools/: definitions.hh  stop-watch.hh
launch/: compensater.launch
python/: CMakeLists.txt
python/scripts/: appli-hands-compensater-chicken.py  appli-one-hand-compensater-hrp.py  appli-one-hand-compensater.py  appli-two-hands-compensater-hrp.py  appli-two-hands-compensater-kine-hrp.py  appli-two-hands-compensater-kine.py  appli-two-hands-compensater.py  compensater.launch  hrp2-quick-tester.py  launcher
python/scripts/stabilizer/: appli-two-hands-compensater-hrp.py  compensater.py
python/test/: demo.py  elasticityCalibration.py  plotScript.py
scripts/: CMakeLists.txt  appli.py  appliOpenHRP.py  compensater.py  launcher  robotViewerLauncher.py
src/: CMakeLists.txt  calibrate.cc  calibrate_imu.cc  dg-imu-attitude-estimation.cc  dg-imu-flexibility-estimation.cc  dg-imu-model-base-flex-estimation.cc  dg-imu-model-free-flex-estimation.cc  drift-from-mocap.cc  dynamic-graph-imu-attitude-estimation.cc  estimator-interface.cc  filter.cc  from-local-to-global-frame.cc  input_reconstructor.cc  moving-frame-transformation.cc  odometry.cc  position-state-reconstructor.cc  stack-of-contacts.cc
src/dynamic_graph/sot/application/stabilizer/: compensater.py  compensater_chicken.py  compensater_solver_kine.py
src/dynamic_graph/sot/application/state_observation/initializations/: hrp2_crane_to_sot.py  hrp2_flexibility_estimator.py  hrp2_mocap_to_sot.py  hrp2_model_base_flex_estimator.py  hrp2_model_base_flex_estimator_imu_force.py  hrp2_model_base_flex_estimator_imu_force_encoders.py  hrp2_model_free_flex_estimator.py
unit-testing/: CMakeLists.txt  instanciation-test.cc
